--- a/235/project2/3d-works.html
+++ b/235/project2/3d-works.html
@@ -17,7 +17,10 @@
                 <a href="index.html"><img id="pfp" src="./images/Retros_ArtemisC_cropped (1).png" alt="profile picture"></a>
                 <h1 class="name">3D Works</h1>
                 <h3 class="bio">
-                    Software Used: Blender
+                    Primary modeling software: Blender
+                </h3>
+                <h3 class="bio">
+                    Currently showcasing a few experiments done while learning three.js for implementation in this site
                 </h3>
             </section>
         </div>
