--- a/235/project2/index.html
+++ b/235/project2/index.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 1 Spec</title>
+    <title>Project 2</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles-copy.css">
-    <script type="module" src="/js/main.js"></script>
-    <script type="module" src="/js/cube.js"></script>
 </head>
 <body>
     <header></header>
@@ -20,6 +18,10 @@
                 twitter: <br>
                 github: KMoriarty02
             </h3>
+            <p>Keegan is a Game Design and Developement major at RIT. They have a passion for art and animation and<br>
+                 you'll frequently find them doing just that while jamming out to their vinyl records. They're currently head down learning<br>
+                 how to create the experiences they so often enjoy playing and watching games.
+                </p>
         </section>
 
         <nav>
