--- a/235/project2/doc2.html
+++ b/235/project2/doc2.html
@@ -23,6 +23,14 @@
         All other images and models used were created by me.
     </p>
     <hr>
+    <h2>Banjo Issue</h2>
+    <p>
+        I have an issue loading the page on banjo due to the fact that three.js an error occurred in the installation of three.js
+        none of the scripts load due to a "disallowed MIME type" error. There arent many good solutions to this problem that I could find. 
+        The most consistent issue I could find is that the import of three.js in incorrectly linked. But because I have no clue where three.js is 
+        in my file directory (even though it works simply referrring to it by name). Its hard to fix by hard coding a file path.
+    </p>
+    <hr>
     <h2>Goal for site</h2>
     <p>I would like for this to serve as a personal portfolio moving forward.<br>
     Thus I wanted to keep the design simplistic while showing information immediately.<br>
