--- a/235/project2/3d-works.html
+++ b/235/project2/3d-works.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KM: 3D Works</title>
-    <link rel="stylesheet" href="/css/3dstyles.css">
+    <link rel="stylesheet" href="./css/3dstyles.css">
     <!-- <script type="module" src="/js/htLoad.js"></script> -->
     <script type="module" src="/js/cube.js"></script>
     <script type="module" src="/js/randomGeo.js"></script>
