--- a/235/pixi-game/HW-pixi-game-start/game.html
+++ b/235/pixi-game/HW-pixi-game-start/game.html
@@ -8,6 +8,7 @@
 		cursor: url(images/move.png) 8 8,crosshair;
 	}
 	</style>
+	<link rel="stylesheet" href="/css/syles.css"/>
 </head>
 <body>
 	<!-- External libraries -->
