--- a/235/pixi-game/HW-pixi-game-start/game.html
+++ b/235/pixi-game/HW-pixi-game-start/game.html
@@ -5,7 +5,7 @@
 	<title>Circle Blast!</title>
 	<style>
 	body{
-		cursor: url(images/move.png) 8 8,crosshair;
+		cursor: url(images/pointer.png) 8 8,crosshair;
 	}
 	</style>
 	<link rel="stylesheet" href="/css/syles.css"/>
@@ -23,5 +23,10 @@
 	<script src="js/utilities.js"></script>
 	<script src="js/classes.js"></script>
 	<script src="js/main.js"></script>
+
+	<h2>Issues</h2>
+	<p>Trying to use my own sprites doesnt work. There seems to be a reference issue that I wasnt able to resolve. The circle blast stuff works fine however, which is confusing. Because the classes using them cant instantiate objects means the code that directly references them wont work. And all the suplimental stuff is useless.
+	I left all the code in and commented out. Theoretically it should work. I was also planning on making a parallax background for the game. But was unable to get that up and running so decided to scrap it so that I could get the upgrade stuff done.
+	My time was limited with the two other projects that I had to get in about the same time. But I did what I could get functional in time.</p>
 </body>
 </html>
